--- a/package.json
+++ b/package.json
@@ -9,14 +9,41 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.15.3",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@prisma/client": "^4.11.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/text-encoding-utf-8": "^1.0.2",
+    "@types/validator": "^13.7.14",
+    "axios": "^1.3.4",
+    "base64url": "^3.0.1",
+    "bcrypt": "^5.1.0",
+    "daisyui": "^2.51.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "framer-motion": "^10.3.0",
+    "jose": "^4.13.1",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^9.0.0",
+    "libphonenumber-js": "^1.10.24",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-phone-number-input": "^3.2.19",
+    "text-encoding-utf-8": "^1.0.2",
+    "validator": "^13.9.0"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.3",
+    "@types/node": "^18.15.3",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "prisma": "^4.11.0",
+    "tailwindcss": "^3.2.7",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   }
 }
