--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.3.4",
     "base64url": "^3.0.1",
     "bcrypt": "^5.1.0",
+    "cookies-next": "^2.1.1",
     "daisyui": "^2.51.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
@@ -34,6 +35,7 @@
     "react-dom": "18.2.0",
     "react-phone-number-input": "^3.2.19",
     "text-encoding-utf-8": "^1.0.2",
+    "tw-elements": "^1.0.0-beta1",
     "validator": "^13.9.0"
   },
   "devDependencies": {
