--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@emotion/styled": "^11.10.6",
     "@prisma/client": "^4.11.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie": "^0.5.1",
+    "@types/js-cookie": "^3.0.3",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/text-encoding-utf-8": "^1.0.2",
+    "@types/uuid": "^9.0.1",
     "@types/validator": "^13.7.14",
     "axios": "^1.3.4",
     "base64url": "^3.0.1",
     "bcrypt": "^5.1.0",
-    "cookies-next": "^2.1.1",
+    "cookie": "^0.5.0",
     "daisyui": "^2.51.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
@@ -32,14 +35,15 @@
     "libphonenumber-js": "^1.10.24",
     "next": "13.2.4",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-phone-number-input": "^3.2.19",
     "text-encoding-utf-8": "^1.0.2",
     "tw-elements": "^1.0.0-beta1",
+    "uuid": "^9.0.0",
     "validator": "^13.9.0"
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.3",
     "@types/node": "^18.15.3",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
