--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/cookie": "^0.5.1",
     "@types/js-cookie": "^3.0.3",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/nodemailer": "^6.4.7",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/text-encoding-utf-8": "^1.0.2",
@@ -34,6 +35,7 @@
     "jsonwebtoken": "^9.0.0",
     "libphonenumber-js": "^1.10.24",
     "next": "13.2.4",
+    "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
