--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/nodemailer": "^6.4.7",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/react-icons": "^3.0.0",
     "@types/text-encoding-utf-8": "^1.0.2",
     "@types/uuid": "^9.0.1",
     "@types/validator": "^13.7.14",
@@ -39,6 +40,7 @@
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "react-phone-number-input": "^3.2.19",
     "text-encoding-utf-8": "^1.0.2",
     "tw-elements": "^1.0.0-beta1",
